--- a/chains.yaml
+++ b/chains.yaml
@@ -1040,7 +1040,7 @@ chain-settings:
       settings:
         options:
           validate-peers: false
-        fork-choice: height
+        fork-choice: quorum
         expected-block-time: 2s
         lags:
           syncing: 40
