Fix kava price condition

--- a/chains.yaml
+++ b/chains.yaml
@@ -603,7 +603,8 @@ chain-settings:
           short-names: [kava]
           chain-id: 0x8ae
           grpcId: 1025
-          gas-price-condition: eq 1000000000
+          gas-price-condition:
+            - eq 1000000000
         - id: Testnet
           priority: 10
           code: KAVA_TESTNET
