--- a/compatible-clients.yaml
+++ b/compatible-clients.yaml
@@ -4,3 +4,8 @@ rules:
       - ethereum
     blacklist:
       - v2.40.0
+  - client: erigon
+    networks:
+      - polygon
+    blacklist:
+      - 3.00.0
