--- a/chains-meta.yaml
+++ b/chains-meta.yaml
@@ -908,3 +908,10 @@
   explorers:
     - https://saigon-app.roninchain.com
   chain-id: 2021
+- currency:
+    name: GOAT Testnet
+    symbol: BTC
+    decimals: 18
+  explorers:
+    - http://explorer.testnet.goat.network/
+  chain-id: 48815
