--- a/chains-meta.yaml
+++ b/chains-meta.yaml
@@ -369,13 +369,6 @@
   explorers:
     - https://explorer.metall2.com
 - currency:
-    name: Ronin
-    symbol: RON
-    decimals: 18
-  chain-id: 2020
-  explorers:
-    - https://app.roninchain.com/
-- currency:
     name: TZERO
     symbol: TZERO
     decimals: 18
@@ -468,13 +461,6 @@
   chain-id: 6398
   explorers:
     - https://connext-sepolia.blockscout.com
-- currency:
-    name: Zeta
-    symbol: ZETA
-    decimals: 18
-  chain-id: 7000
-  explorers:
-    - https://explorer.zetachain.com/
 - currency:
     name: Zeta
     symbol: ZETA
@@ -627,13 +613,6 @@
   explorers:
     - https://explorer.testnet.zircuit.com
 - currency:
-    name: Zircuit
-    symbol: ETH
-    decimals: 18
-  chain-id: 48900
-  explorers:
-    - https://explorer.zircuit.com/
-- currency:
     name: Islamic Coin
     symbol: ISLMT
     decimals: 18
@@ -701,13 +680,6 @@
   explorers:
     - https://base-sepolia.blockscout.com
 - currency:
-    name: reETH
-    symbol: reETH
-    decimals: 18
-  chain-id: 111188
-  explorers:
-    - https://explorer.re.al
-- currency:
     name: Ether
     symbol: ETH
     decimals: 18
@@ -755,13 +727,6 @@
   explorers:
     - https://scrollscan.com
 - currency:
-    name: EDU
-    symbol: EDU
-    decimals: 18
-  chain-id: 656476
-  explorers:
-    - https://opencampus-codex.blockscout.com
-- currency:
     name: Sei
     symbol: SEI
     decimals: 18
@@ -805,20 +770,6 @@
   chain-id: 11155420
   explorers:
     - https://optimism-sepolia.blockscout.com
-- currency:
-    name: ETH
-    symbol: ETH
-    decimals: 18
-  chain-id: 94204209
-  explorers:
-    - https://polygon-blackberry.gelatoscout.com
-- currency:
-    name: ETH
-    symbol: ETH
-    decimals: 18
-  chain-id: 123420111
-  explorers:
-    - https://opcelestia-raspberry.gelatoscout.com
 - currency:
     name: Sepolia Ether
     symbol: ETH
@@ -885,12 +836,22 @@
   explorers:
     - https://explorer.harmony.one/blocks/shard/1
 - currency:
-    name: ETH
-    symbol: ETH
+    name: Ronin
+    symbol: RON
     decimals: 18
-  chain-id: 88153591557
   explorers:
-    - https://arb-blueberry.gelatoscout.com
+    - https://app.roninchain.com/
+  chain-id: 2020
+- explorers:
+    - https://explorer.zetachain.com/
+  chain-id: 7000
+- currency:
+    name: reETH
+    symbol: reETH
+    decimals: 18
+  explorers:
+    - https://explorer.re.al
+  chain-id: 111188
 - currency:
     name: PBG
     symbol: PBG
@@ -899,9 +860,51 @@
     - https://explorer.playblock.io
   chain-id: 1829
 - currency:
+    name: ETH
+    symbol: ETH
+    decimals: 18
+  explorers:
+    - https://opcelestia-raspberry.gelatoscout.com
+  chain-id: 123420111
+- currency:
+    name: ETH
+    symbol: ETH
+    decimals: 18
+  explorers:
+    - https://arb-blueberry.gelatoscout.com
+  chain-id: 88153591557
+- currency:
+    name: ETH
+    symbol: ETH
+    decimals: 18
+  explorers:
+    - https://polygon-blackberry.gelatoscout.com
+  chain-id: 94204209
+- currency:
+    name: EDU
+    symbol: EDU
+    decimals: 18
+  explorers:
+    - https://opencampus-codex.blockscout.com
+  chain-id: 656476
+- currency:
     name: GSWIFT
     symbol: tGS
     decimals: 18
   explorers:
     - https://testnet.gameswift.io/
   chain-id: 10888
+- currency:
+    name: Zircuit
+    symbol: ETH
+    decimals: 18
+  explorers:
+    - https://explorer.zircuit.com/
+  chain-id: 48900
+- currency:
+    name: Ronin
+    symbol: RON
+    decimals: 18
+  explorers:
+    - https://saigon-app.roninchain.com
+  chain-id: 2021
