--- a/chains.yaml
+++ b/chains.yaml
@@ -1053,6 +1053,12 @@ chain-settings:
           grpcId: 1043
           short-names: [ronin]
           chain-id: 0x7e4
+        - id: Saigon
+          priority: 1
+          code: RONIN_SAIGON
+          grpcId: 10102
+          short-names: [ronin-saigon]
+          chain-id: 0x7e5
     - id: neon-evm
       label: Neon EVM
       type: eth
@@ -1828,3 +1834,32 @@ chain-settings:
           grpcId: 10099
           short-names: [xlayer-testnet]
           chain-id: 0xC3
+    - id: sei
+      label: Sei
+      type: eth
+      settings:
+        expected-block-time: 200ms
+        options:
+          validate-peers: false
+        lags:
+          syncing: 100
+          lagging: 30
+      chains:
+        - id: Mainnet
+          priority: 100
+          code: SEI_MAINNET
+          grpcId: 1079
+          short-names: [sei]
+          chain-id: 0x531
+        - id: Devnet
+          priority: 2
+          code: SEI_DEVNET
+          grpcId: 10101
+          short-names: [sei-devnet]
+          chain-id: 0xae3f3
+        - id: Testnet
+          priority: 1
+          code: SEI_TESTNET
+          grpcId: 10100
+          short-names: [sei-testnet]
+          chain-id: 0x530
