--- a/chains.yaml
+++ b/chains.yaml
@@ -1874,7 +1874,7 @@ chain-settings:
         lags:
           syncing: 40
           lagging: 20
-        fork-choice: quorum
+        fork-choice: height
       chains:
         - id: Mainnet
           priority: 100
