--- a/chains.yaml
+++ b/chains.yaml
@@ -1864,6 +1864,24 @@ chain-settings:
           grpcId: 10100
           short-names: [sei-testnet]
           chain-id: 0x530
+    - id: ton
+      label: Ton
+      type: ton
+      settings:
+        options:
+          validate-peers: false
+        expected-block-time: 1s
+        lags:
+          syncing: 40
+          lagging: 20
+        fork-choice: height
+      chains:
+        - id: Mainnet
+          priority: 100
+          code: TON
+          short-names: [ton]
+          chain-id: ton
+          grpcId: 1080
     - id: sonic
       label: Sonic
       type: eth
